fixed links content and footer alignment for small screens

--- a/assets/sass/blocks/links.sass
+++ b/assets/sass/blocks/links.sass
@@ -4,7 +4,7 @@
         flex-direction: column
         gap: 0
         margin: 0
-        a
+        > a
             @include h2
             &::after
                 content: none
@@ -16,6 +16,9 @@
                 @include meta
                 text-decoration: underline
                 text-underline-offset: 2px
+            a
+                @include h6
+    
     .media:where(:not(.media--icon)) 
         width: 100%
         img
@@ -23,13 +26,29 @@
 
 .block-links
     .links
-        li a::after
-            @include h5
-            content: '→'
+        .link-content
+            > a::after
+                @include h5
+                content: '→'
+            
+            > p a
+                @include link()
+                position: relative
+                z-index: 
+                &[target="_blank"]::after
+                    bottom: unset
+                    content: '→'
+                    display: inline-block
+                    font-family: $body-font-family
+                    margin-left: space()
+                    transform: rotate(-45deg)
+                    position: relative
+                    right: unset
+
     
     &:not(.block-links--cards)
         gap: space(4)
-        .link-content a
+        .link-content > a
             @include h5
             span
                 &::after
@@ -68,8 +87,8 @@
 
                 @include in-page-with-sidebar
                     .link-content
-                        a
-                            @include h3
+                        > a
+                            @include h4
                     .media:where(:not(.media--icon))
                         width: columns(4)
 
@@ -89,10 +108,25 @@
                             width: columns(8)
                 .media:where(:not(.media--icon))
                     width: columns(6)
+    
     &--grid
+        .links
+            .link-content
+                > p a
+                    @include small
         @include in-page-without-sidebar
             .links:has(li:only-child)
                 display: block
                 > li
                     @include big-link-style
                     gap: $spacing-3
+                    background: red
+                > p a
+                    @include body-text
+
+    &--cards
+        .links 
+            > li:hover
+                .link-content
+                    p > a
+                        @include link($block-links-card-hover-color)
